--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -12,7 +12,7 @@ body {
 
 /* Barra de navegación */
 nav {
-    background-color: #ffffff;
+    background-color: #122023;
     padding: 1rem 5%;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     position: fixed;
@@ -22,6 +22,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+     height: 100px;
 }
 
 .logo {
@@ -33,15 +34,22 @@ nav {
 .nav-links a {
     margin-left: 2rem;
     text-decoration: none;
-    color: #2c3e50;
+    color: #ffffff;
 }
-
+.logo img {
+    height: 100px;
+    width: auto;
+    transition: transform 0.3s ease;
+}
+.logo img:hover {
+    transform: scale(1.05);
+}
 /* Sección principal */
 .hero {
-    margin-top: 80px;
-    padding: 4rem 5%;
+    margin-top: 100px;
+    padding: 10% 5% 10% 5%;
     background: linear-gradient(rgba(44, 62, 80, 0.9), rgba(44, 62, 80, 0.9)),
-                url('background.jpg') center/cover;
+                url('../assets/hero1.jpg') center/cover;
     color: white;
     text-align: center;
 }
@@ -50,7 +58,24 @@ nav {
     font-size: 2.5rem;
     margin-bottom: 1rem;
 }
-
+.cta-button{
+    display: inline-block;
+    padding: 1rem 2rem;
+    background-color: #0074d9;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin-top: 2%;
+}
+.cta-button:hover{
+    display: inline-block;
+    padding: 1rem 2rem;
+    background-color: #0074d9;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin-top: 2%;
+}
 /* Sección de trámites */
 .services {
     padding: 4rem 5%;
@@ -77,13 +102,13 @@ nav {
 
 .service-icon {
     font-size: 2rem;
-    color: #3498db;
+    color: #0074d9;
     margin-bottom: 1rem;
 }
 
 /* Footer */
 footer {
-    background-color: #2c3e50;
+    background-color: #122023;
     color: white;
     padding: 3rem 5%;
     margin-top: 4rem;
